// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoList render message if empty list provided 1`] = `
<div
  className="VideoList"
>
  No videos provided yet
</div>
`;

exports[`VideoList renders correctly 1`] = `
<div
  className="VideoList"
>
  <ul
    className="VideoList-List"
  >
    <li
      className="VideoList-Item "
      onClick={[Function]}
    >
      https://www.youtube.com/watch?v=OkwplGEUhkM
    </li>
  </ul>
</div>
`;

exports[`VideoList renders correctly with active video 1`] = `
<div
  className="VideoList"
>
  <ul
    className="VideoList-List"
  >
    <li
      className="VideoList-Item VideoList-Item_current"
      onClick={[Function]}
    >
      https://www.youtube.com/watch?v=OkwplGEUhkM
    </li>
  </ul>
</div>
`;

exports[`VideoList renders correctly with remove provided 1`] = `
<div
  className="VideoList"
>
  <ul
    className="VideoList-List"
  >
    <li
      className="VideoList-Item "
      onClick={[Function]}
    >
      <button
        className="VideoList-RemoveItem"
      >
        X
      </button>
      https://www.youtube.com/watch?v=OkwplGEUhkM
    </li>
  </ul>
</div>
`;
